# openniuma

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh.md  __init__.py  add-task.sh  dashboard.sh  dev-loop.sh  init.sh  openniuma.sh  pyproject.toml  stats.sh  status.sh  workflow.yaml  备忘.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  tests.yml
docs/2026-03-23_loop_v1/: autonomous-dev-loop.md  loop规划.md  spec-autonomous-dev-loop.md
docs/2026-03-23_loop_v1_最终/: QA1.md  QA2.md  QA3.md  QA4.md  QA5.md
docs/2026-03-26_多worker/: 2026-03-26-loop升级汇总.md  2026-03-26-多worker并行.md
docs/2026-03-28_dashboard-tui/: niumadebug.md  (+5 more)
lib/: __init__.py  backlog.py  compat.py  config.py  conftest.py  detect.py  failure.py  inbox.py  json_store.py  notify.py  reconcile.py  retry.py  state.py  stats.py  status.py  test_backlog.py  test_branch_naming.py  test_compat.py  test_config.py  test_detect.py  test_e2e.py  test_failure.py  test_inbox.py  test_json_store.py  test_notify.py  test_reconcile.py  test_retry.py  test_smoke.py  test_state.py  test_stats.py  test_status.py
prompts/: _common-rules.md  _common-rules.md.template  ci-fix.md  design-implement.md  design.md  fast-track.md  fix.md  implement.md  merge-fix.md  merge.md  release-prep.md  release.md  verify.md
reviews/: 2-copilot-cocreation-fixlist.md  2-copilot-cocreation-review-v2.md  2-copilot-cocreation-review.md  3-login-animations-review.md
templates/: workflow.yaml.j2
tests/: conftest.py  test_backlog.py  test_branch_naming.py  test_cli.py  test_compat.py  test_config.py  test_config_generate.py  test_detect.py  test_e2e.py  test_failure.py  test_inbox.py  test_json_store.py  test_notify.py  test_prompts.py  test_reconcile.py  test_retry.py  test_smoke.py  test_state.py  test_stats.py  test_status.py
tui/: app.py  data.py  deps.py  styles.tcss
(+68 files in other folders)
